public enum CellType {
    EMPTY,
    SNAKE,
    STONE,
    FOOD
}
