import java.awt.*;

public class Config {
    public static final int cellSize = 20;
    public static final int cellSquareLength = 20;
    public static final int GameArea = cellSize * cellSquareLength;
    public static final int x = cellSize;
    public static final int y = cellSize * 3;
    public static final int numStones = 5;

    public static final Color gardenColor = Color.YELLOW;
    public static final Color gridColor = Color.DARK_GRAY;
    public static final Color snakeColor = Color.RED;
    public static final Color stoneColor = Color.DARK_GRAY;
    public static final Color foodColor = Color.GREEN;
}
